[package]
name = "gwordle"
description = "Solve worlde"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["GHOST <ghostdevbusiness@gmail.com> (https://ghostdev.xyz)"]
keywords = ["gwordle", "wordle", "wordle solver"]
readme = "README.md"
repository = "https://github.com/ghostdevv/gwordle/"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
regex = "1.5"