[package]
name = "gwordle"
description = "Solve worlde"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["GHOST <ghostdevbusiness@gmail.com> (https://ghostdev.xyz)"]
keywords = ["gwordle", "wordle"]
readme = "README.md"
repository = "https://github.com/ghostdevv/gwordle/"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
regex = "1.5"